--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.google.mlkit.vision.demo"
     android:installLocation="auto">
     <!--
  CameraX libraries require minSdkVersion 21, while this quickstart app
@@ -28,33 +27,48 @@
     <application tools:ignore="MissingApplicationIcon">
         <activity
             android:name=".java.MainActivity"
-            android:exported="false"
-            android:label="@string/title_activity_main" >
+            android:exported="true"
+            android:label="@string/title_activity_main"
+
+            android:theme="@style/AppTheme"
+            >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
-        </activity>
 
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
-        <!--
- Optional: Add it to automatically download ML model to device after
-          your app is installed.
-        -->
-        <meta-data
-            android:name="com.google.mlkit.vision.DEPENDENCIES"
-            android:value="barcode,face,ocr,ica,custom_ica" />
 
-        <activity
-            android:name=".java.LivenessActivity"
-            android:exported="true"
-            android:theme="@style/AppTheme">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+<!--        <meta-data-->
+<!--            android:name="com.google.android.gms.version"-->
+<!--            android:value="@integer/google_play_services_version" />-->
+        <!--
+ Optional: Add it to automatically download ML model to device after
+          your app is installed.
+        -->
+<!--        <meta-data-->
+<!--            android:name="com.google.mlkit.vision.DEPENDENCIES"-->
+<!--            android:value="barcode,face,ocr,ica,custom_ica" />-->
+
+
+        <meta-data
+            android:name="com.google.mlkit.vision.DEPENDENCIES"
+            android:value="face" />
+        <activity
+            android:name=".java.LivenessActivity"
+            android:exported="true"
+            android:theme="@style/AppTheme">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
     </application>
 
