--- a/build.gradle
+++ b/build.gradle
@@ -6,16 +6,18 @@ buildscript {
         google()
         mavenCentral()
         mavenLocal()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.4'
+        classpath 'com.android.tools.build:gradle:7.4.2'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.20'
-
+        classpath "gradle.plugin.com.github.johnrengelman:shadow:7.1.1"
         // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        // in the individual module     build.gradle files
     }
 }
-
 allprojects {
     repositories {
         google()
@@ -23,7 +25,9 @@ allprojects {
         mavenLocal()
     }
 }
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
-}
+apply plugin: 'com.github.johnrengelman.shadow'
+apply plugin: 'groovy'
+//
+//task clean(type: Delete) {
+//    delete rootProject.buildDir
+//}
