feat: funcionando adicionar como library em outro app (compilado como aar)

--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.4.2'
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.20'
-        classpath "gradle.plugin.com.github.johnrengelman:shadow:7.1.1"
+//        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.20'
+//        classpath "gradle.plugin.com.github.johnrengelman:shadow:7.1.1"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module     build.gradle files
     }
@@ -25,8 +25,8 @@ allprojects {
         mavenLocal()
     }
 }
-apply plugin: 'com.github.johnrengelman.shadow'
-apply plugin: 'groovy'
+//apply plugin: 'com.github.johnrengelman.shadow'
+//apply plugin: 'groovy'
 //
 //task clean(type: Delete) {
 //    delete rootProject.buildDir
