--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
-apply plugin: 'com.android.library' 
-
+apply plugin: 'com.android.library'
 //apply plugin: 'com.android.application'
 
 
@@ -65,7 +64,7 @@ dependencies {
     implementation 'com.google.mlkit:face-detection:16.1.5'
     // Or comment the dependency above and uncomment the dependency below to
     // use unbundled model that depends on Google Play Services
-    // implementation 'com.google.android.gms:play-services-mlkit-face-detection:17.1.0'
+     implementation 'com.google.android.gms:play-services-mlkit-face-detection:17.1.0'
 
 
     // -------------------------------------------------------
