--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,10 @@ org.gradle.jvmargs=-Xmx4096m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF
 # Uses one worker to build. This helps resolve build OOM issue.
 org.gradle.workers.max=1
 
+
+#org.gradle.java.home=/Library/Java/JavaVirtualMachines/jdk11.jdk/Contents/Home
+
+
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
