--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
 
     defaultConfig {
-//        applicationId "com.google.mlkit.vision.demo"
+//        applicationId "br.com.sistemasth.sdk"
         minSdkVersion 21
         multiDexEnabled true
         targetSdkVersion 33
@@ -46,7 +46,7 @@ android {
     buildFeatures {
         viewBinding true
     }
-    namespace 'com.google.mlkit.vision.demo'
+    namespace 'br.com.sistemasth.sdk'
     androidResources {
         noCompress 'tflite'
     }
