--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,7 @@ afterEvaluate {
 
                 groupId = 'com.github.delcantao'
                 artifactId = '20230514_sdk'
-                version = 'v1.0.5'
+                version = 'v0.0.6'
             }
         }
     }
@@ -74,6 +74,7 @@ repositories {
 dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
 
+//    api 'com.github.jitpack:gradle-simple:1.0'
     // Face features
     implementation 'com.google.mlkit:face-detection:16.1.5'
     // Or comment the dependency above and uncomment the dependency below to
