--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,14 @@ android {
         versionCode 11
         versionName "1.11"
         vectorDrawables.useSupportLibrary = true
+        buildConfigField 'String', 'API_KEY', '"YOUR_API_KEY"'
+        buildConfigField 'String', 'CLIENT', '"YOUR_API_KEY"'
+        buildConfigField 'String', 'USER', '"YOUR_API_KEY"'
+        buildConfigField 'String', 'PASSWORD', '"YOUR_API_KEY"'
+
+
+
+
 //        setProperty("archivesBaseName", "vision-quickstart")
     }
     buildTypes {
@@ -61,7 +69,7 @@ afterEvaluate {
 
                 groupId = 'com.github.delcantao'
                 artifactId = '20230514_sdk'
-                version = 'v0.0.7'
+                version = '0.0.8'
             }
         }
     }
